state report tp - modelisation stacks

--- a/notebooks/1.a_s1_processing.ipynb
+++ b/notebooks/1.a_s1_processing.ipynb
@@ -1,6 +1,18 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "id": "7e9e5f2b-d0ff-4590-9ed2-e439bf079090",
+   "metadata": {},
+   "source": [
+    "## Objectif du notebook\n",
+    "* Extraction des méta-données des produits sentinel 1\n",
+    "* Sélection des produits conformes (à l'orbite relative et couvrant la zone d'étude) et sauvegarde des meta données en csv des produits séléctionnés\n",
+    "* Pipeline de traitements via pyOTB : Crop sur zone d'étude, Calibration, Orthorectification\n",
+    "* Sauvegarde des crop processés résultants de la pipeline"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 1,
    "id": "83bd5a0c-b60b-4d8f-a81a-5d3dfc93eadc",
@@ -23,13 +35,17 @@
     "import rioxarray as rioxr\n",
     "import glob \n",
     "import xarray as xr\n",
-    "import folium\n",
     "from shapely.geometry import box, Polygon\n",
     "import pandas as pd \n",
     "from shapely import wkt\n",
     "import otbApplication\n",
     "import pyotb\n",
-    "\n",
+    "from src.data_processing.s1_otb_processing import run_s1_processing_otb\n",
+    "from ast import literal_eval \n",
+    "import folium\n",
+    "from shapely.geometry import box\n",
+    "from shapely.geometry import Polygon\n",
+    "from pyproj import Transformer\n",
     "from pathlib import Path\n",
     "from typing import Tuple, Dict, Any, List, Optional\n",
     "import fsspec\n",
@@ -55,35 +71,6 @@
    "outputs": [],
    "source": [
     "CRS = 32622"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "0b561a55-b1fa-4acf-9612-e594ac0e1664",
-   "metadata": {},
-   "source": [
-    "root_data_path = \"/home/rustt/Documents/Projects/S1_S2_classification/Data\"\n",
-    "\n",
-    "raster_path_zip = str(Path(root_data_path) / \"S1/zip\" / \"S1B_IW_GRDH_1SDV_20170425T214234_20170425T214302_005323_00953E_F02D.zip\")\n",
-    "\n",
-    "s1_dir = str(Path(root_data_path) / \"S1/zip\")\n",
-    "\n",
-    "raster_path = str(Path(root_data_path) / \"Tests/zip\" / \"S1B_IW_GRDH_1SDV_20170425T214234_20170425T214302_005323_00953E_F02D.SAFE\")\n",
-    "raster_path_tif = str(Path(root_data_path) / \"Tests\" / \"s1b-iw-grd-vh-20170425t214234-20170425t214302-005323-00953e-002.tiff\")\n",
-    "raster_file_tif = \"s1b-iw-grd-vh-20170425t214234-20170425t214302-005323-00953e-002.tiff\"\n",
-    "\n",
-    "study_area = str(Path(root_data_path) / \"StudyArea\" / \"StudyArea.shp\")"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "06e9fa39-ca20-4ecb-b856-81515ef58b88",
-   "metadata": {},
-   "source": [
-    "Etapes : \n",
-    "* 1 - parsing coordinates bbox\n",
-    "* 2 - check product which intersect a least 98% study area => filtered\n",
-    "* 3 - calibrate product + ortho + clip"
    ]
   },
   {
@@ -118,6 +105,14 @@
     "    bbox = manifest.findtext(\".//safe:footPrint/\", namespaces=cfg.ConfigS1.SENTINEL1_NAMESPACES)\n",
     "    bbox = [float(_) for _  in re.findall(\"-*\\d+\\.\\d+\", bbox)]\n",
     "    return Polygon([tuple([x, y]) for x,y in zip(bbox[1::2], bbox[0::2])])"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "093bef60-1bef-4b09-aa1a-dda471573950",
+   "metadata": {},
+   "source": [
+    "### Metadata extraction utils"
    ]
   },
   {
@@ -163,6 +158,10 @@
     "def parse_manifest_sentinel1(\n",
     "    manifest_path,\n",
     ") -> Tuple[Dict[str, Any], Dict[str, Tuple[str, str, str, str, str]]]:\n",
+    "    \"\"\"\n",
+    "    Inspired from\n",
+    "    https://github.com/bopen/xarray-sentinel/blob/main/xarray_sentinel/esa_safe.py\n",
+    "    \"\"\"\n",
     "    # We use ElementTree because we didn't find a XSD definition for the manifest\n",
     "    manifest = ElementTree.parse(manifest_path).getroot()\n",
     "\n",
@@ -280,9 +279,13 @@
     "    - raster paths\n",
     "    \n",
     "    \"\"\"\n",
+    "    # build manifest path file\n",
     "    _, manifest_path = get_fs_path(product_url)\n",
+    "    # extract raster footprint extent\n",
     "    geom_rs = extract_footprint(manifest_path)\n",
+    "    # parse safe manifest file\n",
     "    common_attrs, products = parse_manifest_sentinel1(manifest_path)\n",
+    "    # build tif paths\n",
     "    tif_path = get_product_rasters_path(product_url)\n",
     "    \n",
     "    meta = {\n",
@@ -312,30 +315,28 @@
     "\n",
     "    valid_prod = []\n",
     "    prod_meta = []\n",
-    "\n",
+    "    # read roi file\n",
     "    roi_area = gpd.read_file(shp_path).to_crs(CRS)\n",
-    "\n",
     "    \n",
+    "    # extract meta data for every S1 product\n",
     "    for prod_name in os.listdir(s1_dir):\n",
     "        if prod_name.endswith(\".SAFE\"):\n",
     "\n",
     "            product_url = os.path.join(s1_dir, prod_name)\n",
-    "            \n",
     "            meta = extract_rs_meta(prod_name, product_url)\n",
-    "            \n",
     "            prod_meta.append(meta)\n",
     "\n",
     "    prod_meta = gpd.GeoDataFrame(prod_meta, geometry=\"geometry\", crs=crs_shp).to_crs(CRS)\n",
-    "\n",
+    "    # compute area of intersection (percentage) between roi and raster\n",
     "    prod_meta = compute_intersection(prod_meta, roi_area)\n",
-    "\n",
+    "    # apply filter for product compliance\n",
     "    prod_meta = (\n",
     "        prod_meta[\n",
     "        (prod_meta.intersec_roi_perc >= th_intersec) & \n",
     "        (prod_meta.relative_orbit_number == roi_area[col_orbit_shp].item())\n",
     "        ]\n",
     "    )\n",
-    "    # cast to str\n",
+    "    # cast to str for save\n",
     "    prod_meta[\"geometry\"] = prod_meta.geometry.apply(lambda x: wkt.dumps(x))\n",
     "    prod_meta = pd.DataFrame(prod_meta)\n",
     "\n",
@@ -388,14 +389,6 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "b1263c64-b196-4022-8829-d124e1b29bbf",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
    "id": "85980891-0828-44e7-a872-184463ca2414",
    "metadata": {},
    "outputs": [],
@@ -413,14 +406,21 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "6c70e897-5c7c-403b-a596-8e79568d35f2",
+   "metadata": {},
+   "source": [
+    "* Could dead kernel - run from `s1_otb_processing`"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "id": "50cc614f-a5ec-4dcc-857d-8e13cddf0c0e",
    "metadata": {},
    "outputs": [],
    "source": [
-    "\n",
-    "s1_path_test = \"/home/rustt/Documents/Projects/S1_S2_classification/Data/S1/zip/S1B_IW_GRDH_1SDV_20170425T214234_20170425T214302_005323_00953E_F02D.SAFE/measurement/s1b-iw-grd-vv-20170425t214234-20170425t214302-005323-00953e-001.tiff\"\n"
+    "s1_path_test = \"/home/rustt/Documents/Projects/S1_S2_classification/Data/S1/zip/S1B_IW_GRDH_1SDV_20170425T214234_20170425T214302_005323_00953E_F02D.SAFE/measurement/s1b-iw-grd-vv-20170425t214234-20170425t214302-005323-00953e-001.tiff\""
    ]
   },
   {
@@ -432,26 +432,6 @@
    "source": [
     "dem_path = str(Path(root_data_path) / \"Tests\" / \"DEM\" / \"srtm_1secarc_Cayenne.tif\")\n",
     "out_path = str(Path(root_data_path) / \"Tests\" / \"out_calib.tif\")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "e487f505-c23e-4a51-b824-fb64e958557a",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "from src.data_processing.s1_otb_processing import run_s1_processing_otb"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "79272463-e9d3-415e-80e3-4ae2cd6b414f",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "Path(s1_path_test).stem"
    ]
   },
   {
@@ -510,8 +490,6 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from ast import literal_eval \n",
-    "\n",
     "res = load_meta_products()"
    ]
   },
@@ -532,29 +510,6 @@
     "    for tif_path in paths:\n",
     "        out_file = os.path.join(out_dir, f\"calib_ortho_{Path(tif_path).stem}.tif\")\n",
     "        run_s1_processing_otb(tif_path, out_file)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "50051b25-8680-4721-8c83-10de193a16b9",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "cfg.data_dir_processed"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "539336c5-9808-4836-a797-2b88e33340bd",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "import folium\n",
-    "from shapely.geometry import box\n",
-    "from shapely.geometry import Polygon\n",
-    "from pyproj import Transformer"
    ]
   },
   {
@@ -616,7 +571,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.12"
+   "version": "3.8.18"
   }
  },
  "nbformat": 4,
