--- a/notebooks/1.b_align_sentinel.ipynb
+++ b/notebooks/1.b_align_sentinel.ipynb
@@ -6,13 +6,12 @@
    "metadata": {},
    "source": [
     "## Objectifs\n",
-    "* align geo mapping and extent s1 / s2\n",
-    "* convert s2 reflectance\n"
+    "* align geo mapping and extent s1 / s2\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 1,
    "id": "d4da03a5-f878-41b5-8b8c-726124104ecd",
    "metadata": {},
    "outputs": [],
@@ -67,18 +66,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "id": "5f7d2202-3120-4013-ba13-ca031eb331db",
    "metadata": {},
    "outputs": [],
    "source": [
-    "area = gpd.read_file(study_area).to_crs(EPSG)\n",
+    "#area = gpd.read_file(study_area).to_crs(EPSG)\n",
     "\n",
     "labels = gpd.read_file(labels_path)\n",
     "\n",
     "s2_stack = rioxr.open_rasterio(s2_stack_pan_path)\n",
     "\n",
-    "#s1_raster = rioxr.open_rasterio(os.path.join(s1_folder, os.listdir(s1_folder)[0]))"
+    "s1_raster = rioxr.open_rasterio(os.path.join(s1_folder, os.listdir(s1_folder)[0]))"
    ]
   },
   {
@@ -91,7 +90,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 7,
    "id": "9a0fe5e1-8603-4e11-98f5-da907b58f8f8",
    "metadata": {},
    "outputs": [],
@@ -108,7 +107,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 8,
    "id": "7691f3d9-9d64-41b2-92a6-5070e380811d",
    "metadata": {},
    "outputs": [
@@ -134,25 +133,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
-   "id": "3bc9c03a-7412-40be-8313-8650b1e241db",
+   "execution_count": null,
+   "id": "98e4cbfc-0975-4a93-bb55-ae761a05d2b7",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "S1 raster\n",
-      "shape: (4056, 5610)\n",
-      "resolution: (10.0, -10.0)\n",
-      "bounds: (-5864533.0, 534178.0, -5808433.0, 574738.0)\n",
-      "count: 22754160\n",
-      "CRS: EPSG:3857\n",
-      "\n",
-      "None\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "print(\"S1 raster\")\n",
     "print(print_raster(s1_raster))"
@@ -373,22 +357,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
-   "id": "484ea64f-9ad9-4c0a-9514-84b10e9c2973",
+   "execution_count": null,
+   "id": "b433b5d2-e69b-4d96-b28f-f136de1af2d7",
    "metadata": {},
-   "outputs": [
-    {
-     "ename": "NameError",
-     "evalue": "name 's2_stack' is not defined",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
-      "Cell \u001b[0;32mIn[2], line 2\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[38;5;66;03m# flat dim \"bands\" as variables\u001b[39;00m\n\u001b[0;32m----> 2\u001b[0m s2_clip_match \u001b[38;5;241m=\u001b[39m \u001b[43ms2_stack\u001b[49m\u001b[38;5;241m.\u001b[39mrio\u001b[38;5;241m.\u001b[39mreproject_match(s1_reproject)\n",
-      "\u001b[0;31mNameError\u001b[0m: name 's2_stack' is not defined"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# flat dim \"bands\" as variables\n",
     "s2_clip_match = s2_stack.rio.reproject_match(s1_reproject)"
@@ -496,7 +468,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.12"
+   "version": "3.8.18"
   }
  },
  "nbformat": 4,
